--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@ r<!DOCTYPE HTML>
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
-							</p>
+							</p>   BSc in Theoretical Physics at Lund University, MSc in Theortical Physics at Utrecht University
 							<p>
 								<b>Research Interests:</b>
-							</p>
+							</p> Astroparticle Physics, Gravitational Waves, Dark Matter, Modified Theories of Gravity
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
 							</p>
