--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ r<!DOCTYPE HTML>
 								<b>Research Interests:</b>
 							</p>   Astroparticle Physics, Gravitational Waves, Dark Matter, Modified Theories of Gravity
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>Publications:</b> <a href=" https://orcid.org/0000-0003-3922-7192 ">ORCiD</a>
 							</p>
 						</article>
 
@@ -126,7 +126,7 @@ r<!DOCTYPE HTML>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Gravitational atoms in Numerical Relativity</b><br>
 							</p>
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
@@ -141,7 +141,7 @@ r<!DOCTYPE HTML>
 							</span>
 							<p>
 								<b>Teaching:</b>
-							</p>
+							</p>  Pycbc tutorials for Nikhef's Gravitational wave workshop
 							<p>
 								<b>Outreach:</b>
 							</p>
@@ -155,7 +155,7 @@ r<!DOCTYPE HTML>
 							<h2 class="major">Contact</h2>
 							<p> 
 								<b>Email:</b> 
-							</p>
+							</p>   i.k.a.wernersson@uva.nl
 							<p> 
 								<b>Address:</b> 
 							</p>
