--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ r<!DOCTYPE HTML>
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/alexandrawernersson.PNG" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
