--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ r<!DOCTYPE HTML>
 							<p>
 								<b>Publications:</b> <a href=" https://orcid.org/0000-0003-3922-7192 ">ORCiD</a>
 							</p>
+							<p>
+								<b>Theses:</b> <a href="https://lup.lub.lu.se/student-papers/search/publication?q=author+exact+al2761we-s">BSc thesis</a>
+							</p>
 						</article>
 
 						<!-- Here is the "Research" card. -->
@@ -141,7 +144,8 @@ r<!DOCTYPE HTML>
 							</span>
 							<p>
 								<b>Teaching:</b>
-							</p>  Pycbc tutorials for Nikhef's Gravitational wave workshop
+							</p> 
+							      Pycbc tutorials for Nikhef's Gravitational wave workshop
 							<p>
 								<b>Outreach:</b>
 							</p>
