--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@ r<!DOCTYPE HTML>
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/3dplot.jpg" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Gravitational atoms in Numerical Relativity</b><br>
+								<b>Currently: Gravitational atoms in Numerical Relativity</b><br>
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Project II:</b><br>Project description, including further links to posters, talks, publications.
 							</p>
 						</article>
 
@@ -144,8 +144,8 @@ r<!DOCTYPE HTML>
 							</span>
 							<p>
 								<b>Teaching:</b>
-							</p> 
-							      Pycbc tutorials for Nikhef's Gravitational wave workshop
+							</p>  Pycbc tutorials for Nikhef's Gravitational wave workshop
+
 							<p>
 								<b>Outreach:</b>
 							</p>
