--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ r<!DOCTYPE HTML>
 
 							<p>
 								<b>Outreach:</b>
-							</p>
+							</p> Join me on Goodreads: <a href="https://www.goodreads.com/user/show/114445291-alexandra-wernersson">Goodreads profile</a>
 							<p>
 								<b>Equity & Inclusion:</b>
 							</p>
