--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ r<!DOCTYPE HTML>
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
 								<img src="images/3dplot.jpg" style="width:280px; height:280px; object-fit: cover;">
-								<!-- 	Here is a paragraph where you can put your position and institution, or
-									a short line about yourself.
+								<!-- 	<p> I am currently a PhD student at the University of Amsterdam <a href="https://grappa.vercel.app" target="_black"> where I do research in multi-messenger astrophysics.
+I am particularly interested in how we can combine observaions of gravitational waves and electroamgnetic signals to probe the interior of neutron stars.  </p>
 								-->
 								<p>
-									Research Assistant <br> University of Amsterdam
+									PhD student in Physics <br> University of Amsterdam
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
