--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 								<b>Research Interests:</b>
 							</p>   Astroparticle Physics, Gravitational Waves, Dark Matter, Modified Theories of Gravity
 							<p>
-								<b>Publications:</b> <a href=" https://orcid.org/0000-0003-3922-7192 ">ORCiD</a>
+								<b>Publications:</b> <a href="https://inspirehep.net/authors/2617455 ">Inspire</a>
 							</p>
 							<p>
 								<b>Theses:</b> <a href="https://lup.lub.lu.se/student-papers/search/publication?q=author+exact+al2761we-s">BSc thesis</a>
@@ -129,10 +129,10 @@ I am particularly interested in how we can combine observaions of gravitational 
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Currently: Gravitational atoms in Numerical Relativity</b><br>
+								<b>Currently: Self-interacting gravitational atoms in the strong gravity regime <a href="https://inspirehep.net/literature/2617453" a></b><br>
 							</p>
 							<p>
-								<b>Project II:</b><br>Project description, including further links to posters, talks, publications.
+								<b>Projects:</b><br>Probing the interior of neutron stars using multi-messenger observations.
 							</p>
 						</article>
 
