--- a/index.html
+++ b/index.html
@@ -137,21 +137,24 @@ I am particularly interested in how we can combine observaions of gravitational 
 						</article>
 
 						<!-- Here is the "Community" card. -->
-						<article id="community">
-							<h2 class="major">Community</h2>
+						<article id="Miscellaneous">
+							<h2 class="major">Miscellaneous</h2>
 							<span class="image main">
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
 							<p>
+								My amazing supervisors have taught me about the importance of a healthy work-life balance. 
+								Therefore, outside of work I enjoy exploring parts of Amsterdam, learning languages and playing my violin or guitar.
+								Below I have also listed some of my current teaching and outrech projects.
 								<b>Teaching:</b>
 							</p>  Pycbc tutorials for Nikhef's Gravitational wave workshop
 
 							<p>
 								<b>Outreach:</b>
-							</p> Join me on Goodreads: <a href="https://www.goodreads.com/user/show/114445291-alexandra-wernersson">Goodreads profile</a>
+							</p> I </a>
 							<p>
 								<b>Equity & Inclusion:</b>
-							</p>
+							</p> This year i volunteer for the "Altair school" organized by prof. Sera Markoff.
 						</article>
 
 						<!-- Here is a the "Contact" card. -->
