--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
+									<a href="#Miscellaneous">Miscellaneous</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
