--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#Miscellaneous">Miscellaneous</a>
+									<a href="#community">Community</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
@@ -137,8 +137,8 @@ I am particularly interested in how we can combine observaions of gravitational 
 						</article>
 
 						<!-- Here is the "Community" card. -->
-						<article id="Miscellaneous">
-							<h2 class="major">Miscellaneous</h2>
+						<article id="community">
+							<h2 class="major">Community</h2>
 							<span class="image main">
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
