--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 						<article id="community">
 							<h2 class="major">Community</h2>
 							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
+								<img src="images/jag_cykel.jpeg" alt=""/>
 							</span>
 							<p>
 								My amazing supervisors have taught me about the importance of a healthy work-life balance. 
