--- a/index.html
+++ b/index.html
@@ -107,14 +107,15 @@ I am particularly interested in how we can combine observaions of gravitational 
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
-							</p>   BSc in Theoretical Physics at Lund University, MSc in Theortical Physics at Utrecht University
-							<p>
+							</p>   BSc in Theoretical Physics at Lund University, 
+							 <p>     MSc in Theortical Physics at Utrecht University
+							</p> 
 								<b>Research Interests:</b>
 							</p>   Astroparticle Physics, Gravitational Waves, Dark Matter, Modified Theories of Gravity
-							<p>
+							</p> 
 								<b>Publications:</b> <a href="https://inspirehep.net/authors/2617455">Inspire</a>
 							</p>
-							<p>
+							
 								<b>Theses:</b> <a href="https://lup.lub.lu.se/student-papers/search/publication?q=author+exact+al2761we-s">BSc thesis</a>
 							</p>
 						</article>
@@ -129,7 +130,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Currently: </b><br> <a href="https://inspirehep.net/literature/2617453">Self-interacting gravitational atoms in the strong gravity regime</a>
+								<b>Recent: </b><br> <a href="https://inspirehep.net/literature/2617453">Self-interacting gravitational atoms in the strong gravity regime</a>
 							</p>
 							<p>
 								<b>Projects:</b><br>Probing the interior of neutron stars using multi-messenger observations.
