--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 							 <p>     MSc in Theortical Physics at Utrecht University
 							</p> 
 								<b>Research Interests:</b>
-							</p>   Astroparticle Physics, Gravitational Waves, Dark Matter, Modified Theories of Gravity
+							</p>   Gravitational Waves, Cosmology, Machine learning, Dark Matter, Modified Theories of Gravity
 							</p> 
 								<b>Publications:</b> <a href="https://inspirehep.net/authors/2617455">Inspire</a>
 							</p>
@@ -184,7 +184,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="#AlexWernersson" class="icon fa-twitter">
+									<a href="astro_alexus" class="icon fa-twitter">
 										<span class="label">Twitter</span>
 									</a>
 								</li>
