--- a/index.html
+++ b/index.html
@@ -151,8 +151,11 @@ I am particularly interested in how we can combine observaions of gravitational 
 								<b>Teaching:</b>
 							</p>  Pycbc tutorials for Nikhef's Gravitational wave workshop
 
-							</p> 
+							</p>  
 								<b>Outreach:</b>
+							</p> Occasionally I write paper summaries for astrobites. You can find some
+							of my articles <a href="https://astrobites.org/?s=Alexandra+wernersson">here</a>.
+							</p> 
 							</p> I enjoy discussing various topics with my colleagues and since I am shy, I sometimes share 
 							some of my thoughts on a <a href="https://www.goodreads.com/user/show/114445291-alexandra-wernersson">blog</a>.
 							</p> 
