--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ r<!DOCTYPE HTML>
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/3dplot.jpg" style="width:280px; height:280px; object-fit: cover;">
+								<img src="images/alexandrawernersson.PNG" style="width:280px; height:280px; object-fit: cover;">
 								<!-- 	<p> I am currently a PhD student at the University of Amsterdam <a href="https://grappa.vercel.app" target="_black"> where I do research in multi-messenger astrophysics.
 I am particularly interested in how we can combine observaions of gravitational waves and electroamgnetic signals to probe the interior of neutron stars.  </p>
 								-->
@@ -58,7 +58,8 @@ I am particularly interested in how we can combine observaions of gravitational 
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Astronomy.jpg" target="_blank">Curriculum Vitae</a>
+									Listening to the cosmic symphony
+								<!--	<a href="images/Astronomy.jpg" target="_blank">Curriculum Vitae</a> -->
 								</p>
 							</div>
 						</div>
