--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 							of my articles <a href="https://astrobites.org/?s=Alexandra+wernersson">here</a>.
 							</p> 
 							</p> I enjoy discussing various topics with my colleagues and since I am shy, I sometimes share 
-							some of my thoughts on a <a href="https://www.goodreads.com/user/show/114445291-alexandra-wernersson">blog</a>.
+							some of my thoughts on a <a href="https://theoreticalforest.wordpress.com">blog</a>.
 							</p> 
 								You can also follow me on <a href="https://theoreticalforest.wordpress.com">Goodreads</a> 
 								if you wish to share book recommendations.
