--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 								<p>
 									<!-- Note you will want to change where this points to! -->
 									Listening to the cosmic symphony
-								<!--	<a href="images/Astronomy.jpg" target="_blank">Curriculum Vitae</a> -->
+								<!--	<a href="images/GWs.jpg" target="_blank">Curriculum Vitae</a> -->
 								</p>
 							</div>
 						</div>
@@ -87,7 +87,7 @@ I am particularly interested in how we can combine observaions of gravitational 
 									another List Item with a link inside of it.
 								-->
 								<!-- <li>
-									<a href="images/Astronomy.jpg">My CV</a>
+									<a href="images/GWs.jpg">My CV</a>
 								</li> -->
 							</ul>
 						</nav>
