--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@ I am particularly interested in how we can combine observaions of gravitational 
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Recent: </b><br> <a href="https://inspirehep.net/literature/2617453">Self-interacting gravitational atoms in the strong gravity regime</a>
+								<b>I am currently invested in how machine learning can aid in gravitational wave data analysis. In particular, I 
+								am interested in the challenges of analyzing real data and how machine learning can aid in overcoming these challenges.</b>
+								<b> In the past I worked on numerical relativity and probing dark matter around black holes: </b><br> <a href="https://inspirehep.net/literature/2617453">Self-interacting gravitational atoms in the strong gravity regime</a>
 							</p>
 							<p>
-								<b>Projects:</b><br>Probing the interior of neutron stars using multi-messenger observations.
+								<b>Projects:</b><br>Enhancing gravitational wave data analysis with machine learning.
 							</p>
 						</article>
 
